--- a/hugo.toml
+++ b/hugo.toml
@@ -1,3 +1,3 @@
-baseURL = 'http://example.org/'
+baseURL = 'https://catpaulkatze.github.io/hsz/'
 languageCode = 'en-us'
 title = 'My New Hugo Site'
